Fixed functionality issues with logo jump to top

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ p {
   color: #f2f2f2;
   text-align: center;
   margin-bottom: 100px;
+  scroll-margin-top: 100px;
 }
 
 .title-text {
